@@ -14,12 +14,19 @@ MAJOR UPDATES
     This is also included in reports.
   o Confirmation of data upload was added. Also warnings and errors are
     displayed in case that something went wrong when uploading.
+  o In IRT training
+      - parameter theta (latent ability) is now included
+      - the interpretation for characteristic curves is provided
+      - horizontal and vertical lines for specified theta were added
+        into plot for characteristic curves
 
 MINOR UPDATES
 
   o Link for Adela's website was added.
   o Columns for BIC and its adjusted version were swapped in table for
     IRT models comparison.
+  o In IRT section dpi of downloaded plots was set to 300.
+  o In IRT training downloaded plots also include legend with parameters.
 
 ---------------------------------------------------
 - Changes in ShinyItemAnalysis 1.2.4 (2017-08-28) -
